Stop-Gap Update
Working on refactoring modal for filter, stop-gap while I merge in version changes.

--- a/resources/js/components/dashboard/dashboard-main/searchBar.css
+++ b/resources/js/components/dashboard/dashboard-main/searchBar.css
@@ -32,9 +32,31 @@
     position: absolute;
 }
 
+.datePickerWidget {
+    width: 50%;
+    height: 30%;
+    top: 40%;
+    left: 25%;
+    position: absolute;
+}
+
 .filterHeaderText {
     font-family: 'Roboto';
     font-size: 2vw;
+    display: flex;
+    position: relative;
+    top: 0%;
+    width: 90%;
+    height: 10%;
+    left: 5%;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.datePickerHeader {
+    font-family: 'Roboto';
+    font-size: 1.5vw;
     display: flex;
     position: relative;
     top: 0%;
